# stinkbot_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
alpaca_sdk/: AlpacaClient.cpp  AlpacaClient.h  CMakeLists.txt
alpaca_sdk/accounts/: account.cpp  account.h
alpaca_sdk/brokers/: broker.cpp  broker.h
alpaca_sdk/data/: market_data.cpp  market_data.h
alpaca_sdk/trades/: trade.cpp  trade.h
